--- a/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
+++ b/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
@@ -19,3 +19,46 @@ footer {
   color: midnightblue;
 }
 
+.midnightblue{
+  color: midnightblue;
+}
+
+.tile-image{
+  width: 300px;
+  float: left;
+  margin-right: 50px;
+}
+
+.left{
+  float: left;
+}
+.right{
+  float: right;
+}
+
+.card{
+  width: 45%;
+}
+
+@media (max-width:680px) {
+  .logo{
+    width: 20%;
+  }
+
+  h1{
+    font-size: 50px;
+    text-align: center;
+  }
+
+  .card{
+    width: 100%;
+    display: block;
+  }
+
+  .tile-image{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
