--- a/capstone2_Portefolio/style.css
+++ b/capstone2_Portefolio/style.css
@@ -19,6 +19,12 @@ body{
     border-radius: 1rem;
 }
 
+section{
+    display: flex;
+    justify-content: center;
+    padding: 5rem;
+}
+
 a{
     color: #71C9CE;
     text-decoration: none;
@@ -27,18 +33,14 @@ a{
 p{
     font-family: "Noto Sans", sans-serif;
     width: 50ch;
+    margin-left: 0.9rem;
 }
-
 h1{
-    text-align: center;
-    font-size: 10rem;
+    font-size: 8rem;
 }
-section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+h2{
+    margin: 0.9rem;
 }
-
 
 /* hero */
 nav{
@@ -58,18 +60,17 @@ nav ul{
 .container-intro{
     display: flex;
     justify-content: center;
+    align-items: end;
     gap: 3rem;
     border-radius: 2rem;
     background-color: #CBF1F5;
     width: 100rem;
     padding: 3rem;
 }
+/* .profile-desc{
+    margin: 8rem 0 10rem;
+} */
 
-.profile-desc{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
 span{
     text-decoration: underline;
 }
