--- a/Backend/4.4 Band Generator Project/views/partials/footer.ejs
+++ b/Backend/4.4 Band Generator Project/views/partials/footer.ejs
@@ -2,7 +2,9 @@
 
 <footer>
   <!-- Step 4 - Add a dynamic year to the footer using JS. -->
-  <p>Copyright © 200X</p>
+   <%const date = new Date();%>
+   <%const year = date.getUTCFullYear();%>
+  <p>Copyright © <%= year %></p>
 </footer>
 </body>
 
