fin capstone blog webappl

--- a/Backend/capstone3_blogwebapp/public/styles/main.css
+++ b/Backend/capstone3_blogwebapp/public/styles/main.css
@@ -1,3 +1,4 @@
+/*  !!!!!!!!!!!!!!!!!!!!!Entierment generer avec chatGPT!!!!!!!!!!!!!!!!!!!! */
 /* Reset des marges et des paddings par défaut */
 * {
     margin: 0;
