affichage des cover ok

--- a/Backend/capstone5_Book Notes/views/books/index.ejs
+++ b/Backend/capstone5_Book Notes/views/books/index.ejs
@@ -3,6 +3,7 @@
     <div class="row">
         <%books.forEach(book=>{%>
             <div class="col-2">
+                <img src="<%= book.cover_url %>">
                 Titre: <%= book.title %>
                 Auteur: <%= book.last_name %> <%= book.first_name %>
                 Date: <%= book.read_date %>
