--- a/Backend/capstone5_Book Notes/views/books/create.ejs
+++ b/Backend/capstone5_Book Notes/views/books/create.ejs
@@ -2,10 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-2">
-            <img src=<%= book.cover_url %>>
-        </div>
-        <div class="col-2">
-            <form action="/book/<%= book.id_book %>/edit" method="post">
+            <form action="/book/<%= book.id_book %>/create" method="post">
                 <div class="mb-3">
                     <label for="read-date" class="form-label">Date de lecture</label>
                     <input type="date" id="read-date" class="form-control" required name="read-date" value=<%= book.read_date.toISOString().split('T')[0] %>>
