--- a/Backend/capstone5_Book Notes/views/books/index.ejs
+++ b/Backend/capstone5_Book Notes/views/books/index.ejs
@@ -1,5 +1,6 @@
 <%- include('../partials/header') %>
-<button type="button" class="btn btn-primary">Ajouter un livre</button>
+<!-- <button type="button" class="btn btn-primary" href="/books/new">Ajouter un livre</button> -->
+ <a href="/books/new" type="button" class="btn btn-primary">Ajouter un livre</a>
 <div class="container">
     <div class="row g-4">
         <%books.forEach(book=>{%>
